Fix scrollbar appearing

--- a/src/popup/styles/PopupPage.scss
+++ b/src/popup/styles/PopupPage.scss
@@ -1,3 +1,7 @@
+html {
+  scrollbar-width: none;
+}
+
 body {
   margin: 0;
   font-family: "Segoe UI", "San Francisco", "Ubuntu", "Fira Sans", "Roboto", "Arial", "Helvetica",
